[gd_scene load_steps=7 format=3 uid="uid://cn07gtp8s53bo"]

[ext_resource type="Script" uid="uid://4ywjys7qgiya" path="res://prefabs/ladder/ladder01.gd" id="1_hrhbn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hrhbn"]
size = Vector3(1, 4, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_sib7e"]
size = Vector3(1, 4, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hrhbn"]
transparency = 1
albedo_color = Color(0.235294, 0.235294, 0.235294, 0.552941)

[sub_resource type="BoxMesh" id="BoxMesh_mbql3"]
material = SubResource("StandardMaterial3D_hrhbn")
size = Vector3(1, 4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mbql3"]
size = Vector3(1, 4, 0.962793)

[node name="ladder" type="StaticBody3D"]
script = ExtResource("1_hrhbn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_hrhbn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("BoxMesh_sib7e")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.612666)
mesh = SubResource("BoxMesh_mbql3")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="." groups=["Ladder"]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.581396)
shape = SubResource("BoxShape3D_mbql3")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
